# serde-partial

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: test.yml
macro/: Cargo.toml
macro/src/: lib.rs
src/: alloc.rs  filter.rs  lib.rs  map.rs  std.rs  struct.rs
