[package]
name = "serde-partial"
version = "0.1.0"
edition = "2021"
authors = ["Raphaël Thériault <self@raftar.io>"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", default-features = false }
serde-partial-macro = { path = "macro" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["macro"]
