[package]
name = "serde-partial"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
authors = ["Raphaël Thériault <self@raftar.io>"]
license = "MIT OR Apache-2.0"
description = "Serde partial serialization made easy"
repository = "https://github.com/raftario/serde-partial"

[dependencies]
serde = { version = "1", default-features = false }
serde-partial-macro = { path = "macro", version = "0.1.0" }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
members = ["macro"]
