[package]
name = "serde-partial-macro"
version = "0.1.0"
edition = "2021"
authors = ["Raphaël Thériault <self@raftar.io>"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1", default-features = false, features = ["proc-macro"] }
serde_derive_internals = "~0.26.0"
syn = { version = "1", default-features = false, features = [
    "proc-macro",
    "derive",
] }
