[package]
name = "serde-partial-macro"
version = "0.3.1"
edition = "2021"
rust-version = "1.56.0"
authors = ["Raphaël Thériault <self@raftar.io>"]
license = "MIT OR Apache-2.0"
description = "proc-macro for serde-partial"
repository = "https://github.com/raftario/serde-partial"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1", default-features = false, features = ["proc-macro"] }
serde_derive_internals = "~0.26.0"
syn = { version = "1", default-features = false, features = [
    "proc-macro",
    "derive",
] }
